refactor: 생성자 주입, handle하는 예외 특정화